<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_layout_camera_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview_camera_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_image_capture_camera_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/activity_camera_take_photo"
        android:elevation="6dp"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:backgroundTint="@color/beige_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="36dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back_camera_activity"
        android:layout_width="51dp"
        android:layout_height="57dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/activity_camera_back_button"
        android:elevation="1dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:backgroundTint="@color/beige_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="48dp"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    <Button
        android:id="@+id/validate_button_camera_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/activity_camera_validate"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/fab_image_capture_camera_activity"
        app:layout_constraintEnd_toStartOf="@id/fab_image_capture_camera_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fab_image_capture_camera_activity" />

    <Button
        android:id="@+id/cancel_button_camera_activty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/activity_camera_cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/fab_image_capture_camera_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fab_image_capture_camera_activity"
        app:layout_constraintTop_toTopOf="@id/fab_image_capture_camera_activity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/front_layout_camera_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@color/transparentBlack75"
        android:elevation="6dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/fab_image_capture_camera_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_layout_camera_activity">

        <ImageView
            android:id="@+id/imageview_preview_camera_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/transparentBlack75"
            android:contentDescription="@string/activity_camera_preview_photo"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>